<resources>
    <string name="app_name">MVP Simple</string>
    <string name="loading">Loading...</string>
    <string name="service_unavailable">Service unavailable.</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="previous">Previous</string>
    <string name="next">Next</string>
    <string name="post_id">Post ID</string>
    <string name="post_url">Post URL</string>
    <string name="blog_id">Blog ID</string>
    <string name="blog_name">Blog Name</string>
    <string name="blog_description">Blog Description</string>
    <string name="blog_url">Blog URL</string>
    <string name="blog_post_count">Blog Post Count</string>
    <string name="blog_info">Blog Info</string>
</resources>
